--- a/DCompiler.vcxproj.filters
+++ b/DCompiler.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="symbols.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="makefile">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="symbols.h">
@@ -59,5 +62,10 @@
     <ClInclude Include="binTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
